[package]
name = "rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.10", features = ["grpc-sys"] }
opentelemetry-semantic-conventions = "0.8"

[lib]
name = "rust_sdk"
path = "tracer/tracer.rs"
